# CMAKE_PROJECT_EXAMPLE

./: CMakeLists.txt  README.md
src/: main.cpp
